# ScarpShield

./: .env.example  .gitignore  Build.txt  LICENSE  MANIFEST.in  README.md  SECURITY.md  ScarpShield_Analysis_Report.md  config.example.json  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: publish.yml
.qoder/repowiki/en/content/: CLI Command Reference.md  Configuration Management.md  Deployment and Maintenance.md  Development Implementation Guide.md  Getting Started.md  Monitoring Engine.md  Project Overview.md  Telegram Alert System.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
scarp_shield/: __init__.py  cli.py  config.py  monitor.py
scarp_shield/alerts/: __init__.py  base.py  console.py  discord_alert.py  dispatcher.py  email_alert.py  slack_alert.py  telegram_alert.py
scarp_shield/gui/: __init__.py  app.py
scarp_shield/gui/static/css/: dashboard.css  theme.css
scarp_shield/gui/static/js/: app.js
scarp_shield/gui/templates/: alerts.html  base.html  contracts.html  dashboard.html  login.html  logs.html  settings.html
